@@ -5,9 +5,11 @@ import jakarta.ejb.Stateless;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.PersistenceContext;
 import sv.edu.ues.occ.ingenieria.prn335_2024.cine.entity.Pelicula;
+import sv.edu.ues.occ.ingenieria.prn335_2024.cine.entity.PeliculaCaracteristica;
+import sv.edu.ues.occ.ingenieria.prn335_2024.cine.entity.Programacion;
+import sv.edu.ues.occ.ingenieria.prn335_2024.cine.entity.Sala;
 
 import java.io.Serializable;
-import java.util.Collections;
 import java.util.List;
 import java.util.logging.Level;
 import java.util.logging.Logger;
@@ -15,29 +17,10 @@ import java.util.logging.Logger;
 @Stateless
 @LocalBean
 public class PeliculaBean extends AbstractDataPersist<Pelicula> implements Serializable {
-
     @PersistenceContext(unitName = "cinePU")
-    private EntityManager em;
-
-    private static final Logger logger = Logger.getLogger(PeliculaBean.class.getName());
-
+    EntityManager em;
     public PeliculaBean() {
         super(Pelicula.class);
-    }
-
-    @Override
-    public void create(Pelicula registro) throws IllegalStateException, IllegalArgumentException {
-        if (registro == null) {
-            logger.log(Level.SEVERE, "Error al crear la película: El registro es nulo");
-            throw new IllegalArgumentException("El registro no puede ser nulo.");
-        }
-        try {
-            super.create(registro);
-            logger.log(Level.INFO, "Película creada con éxito: {0}", registro);
-        } catch (IllegalArgumentException | IllegalStateException e) {
-            logger.log(Level.SEVERE, "Error al crear la película", e);
-            throw e;
-        }
     }
 
     @Override
@@ -45,117 +28,40 @@ public class PeliculaBean extends AbstractDataPersist<Pelicula> implements Seria
         return em;
     }
 
-    /**
-     * Obtiene un rango de películas desde la base de datos.
-     *
-     * @param first Índice de inicio
-     * @param max   Número máximo de registros
-     * @return Lista de películas en el rango indicado o una lista vacía en caso de error
-     */
-    public List<Pelicula> findRange(int first, int max) {
-        if (first < 0 || max <= 0) {
-            logger.log(Level.WARNING, "Parámetros de rango inválidos: first={0}, max={1}", new Object[]{first, max});
-            return Collections.emptyList();
-        }
+    public List<Pelicula> getAllPeliculas(int init , int max , String campo,String orden) {
         try {
-            return em.createQuery("SELECT p FROM Pelicula p", Pelicula.class)
-                    .setFirstResult(first)
-                    .setMaxResults(max)
-                    .getResultList();
-        } catch (Exception e) {
-            logger.log(Level.SEVERE, "Error al obtener el rango de películas", e);
-            return Collections.emptyList();
+            List<Pelicula> ps= em.createNamedQuery("Pelicula.findAll", Pelicula.class).setFirstResult(init).setMaxResults(max).getResultList();
+            return ps;
+        }catch (Exception ex){
+            Logger.getLogger(SalaBean.class.getName()).log(Level.SEVERE, null, ex);
         }
+        return List.of();
     }
 
-    /**
-     * Encuentra una película por su ID.
-     *
-     * @param idPelicula El ID de la película
-     * @return La película encontrada o null si no existe
-     * @throws IllegalArgumentException Si el ID es inválido
-     */
-    public Pelicula findById(final Integer idPelicula) {
-        if (idPelicula == null || idPelicula <= 0) {
-            logger.log(Level.WARNING, "ID de película no válido: {0}", idPelicula);
-            throw new IllegalArgumentException("ID de película no válido");
-        }
-        try {
-            return em.find(Pelicula.class, idPelicula);
-        } catch (Exception e) {
-            logger.log(Level.SEVERE, "Error al buscar la película por ID", e);
-            return null;
-        }
-    }
-
-    /**
-     * Obtiene todas las películas de la base de datos.
-     *
-     * @return Lista de todas las películas o una lista vacía en caso de error
-     */
-    public List<Pelicula> findAll() {
-        try {
-            return em.createNamedQuery("Pelicula.findAll", Pelicula.class).getResultList();
-        } catch (Exception e) {
-            logger.log(Level.SEVERE, "Error al obtener todas las películas", e);
-            return Collections.emptyList();
-        }
-    }
-
-    /**
-     * Busca las películas por nombre.
-     *
-     * @param nombre Nombre de la película a buscar
-     * @return Lista de películas que coinciden con el nombre o una lista vacía si no hay coincidencias
-     */
-    public List<Pelicula> findByName(String nombre) {
-        if (nombre == null || nombre.trim().isEmpty()) {
-            logger.log(Level.WARNING, "Nombre de búsqueda inválido o vacío");
-            return Collections.emptyList();
-        }
-        try {
-            return em.createNamedQuery("Pelicula.findByName", Pelicula.class)
-                    .setParameter("nombre", "%" + nombre.trim() + "%")
-                    .getResultList();
-        } catch (Exception e) {
-            logger.log(Level.SEVERE, "Error al buscar películas por nombre", e);
-            return Collections.emptyList();
-        }
-    }
-
-    /**
-     * Cuenta todas las películas en la base de datos.
-     *
-     * @return El número total de películas o 0 en caso de error
-     */
-    public int countAll() {
+    public int countAllPeliculas() {
         try {
             Number result = (Number) em.createNamedQuery("Pelicula.countAll").getSingleResult();
-            return result != null ? result.intValue() : 0;
+
+            if (result == null) {
+                return 0;
+            }
+
+            return result.intValue();
         } catch (Exception ex) {
-            logger.log(Level.SEVERE, "Error al contar las películas", ex);
+            Logger.getLogger(SalaBean.class.getName()).log(Level.SEVERE, "Error al contar las peliculas", ex);
             return 0;
         }
     }
 
-    /**
-     * Busca las películas por sinopsis.
-     *
-     * @param sinopsis Sinopsis de la película a buscar
-     * @return Lista de películas que contienen la sinopsis especificada o una lista vacía si no hay coincidencias
-     */
-    public List<Pelicula> findBySinopsis(String sinopsis) {
-        if (sinopsis == null || sinopsis.trim().isEmpty()) {
-            logger.log(Level.WARNING, "Sinopsis de búsqueda inválida o vacía");
-            return Collections.emptyList();
-        }
+    public List<PeliculaCaracteristica> getCaracteristicasByPelicula(Pelicula pelicula) {
         try {
-            return em.createNamedQuery("Pelicula.findBySinopsis", Pelicula.class)
-                    .setParameter("sinopsis", "%" + sinopsis.trim() + "%")
+            return em.createNamedQuery("Caracteristica.findByPelicula", PeliculaCaracteristica.class)
+                    .setParameter("peliculaId", pelicula.getIdPelicula())
                     .getResultList();
-        } catch (Exception e) {
-            logger.log(Level.SEVERE, "Error al buscar películas por sinopsis", e);
-            return Collections.emptyList();
+        } catch (Exception ex) {
+            Logger.getLogger(PeliculaBean.class.getName()).log(Level.SEVERE, "Error al obtener características", ex);
+            return List.of();
         }
     }
+
 }
